# threadr

./: .gitignore  .railwayignore  ACTION_SUMMARY_VISUAL.md  ADD_JWT_SECRET_NOW.md  API_DOCUMENTATION.md  API_KEYS.md  API_KEY_DEBUG_SOLUTION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETE_READY_TO_DEPLOY.md  CLEANUP_REPORT_AUGUST_6.md  CLOUDFLARE_SETUP.md  CORRECTED_VERCEL_SETUP.md  CRITICAL_FIXES_DEPLOYED.md  CRITICAL_FIXES_TEST_PLAN.md  CRITICAL_ISSUES_FOUND_AND_FIXED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OPTIONS_GUIDE.md  DEPLOYMENT_STATUS_AUGUST_6.md  DEPLOYMENT_STATUS_UPDATE.md  DEPLOYMENT_SUCCESS_REPORT.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_UNBLOCK_PLAN.md  DEPLOYMENT_VERIFICATION_GUIDE.md  DEPLOY_NEXTJS_NOW.md  DOCUMENTATION_STATUS_2025-08-06.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.minimal  FILE_LOCATION_INDEX_UPDATED.md  FINAL_ACTION_RAILWAY_OR_RENDER.md  FINAL_DATABASE_TEST_RESULTS.md  FINAL_STEPS_TO_PRODUCTION.md  FIXED_INSTRUCTIONS_SUMMARY.md  FRONTEND_API_KEY_FIX.md  FRONTEND_FIXES.md  FRONTEND_INSPECTION_REPORT.md  HISTORY_PAGE_IMPLEMENTATION.md  IMMEDIATE_ACTIONS.md  (+143 more)
backend/: .env.example  .env.production.example  .env.stripe.example  .gitignore  DEPLOYMENT_TRIGGER.txt  Dockerfile.fly  OPENAI_SETUP.md  POSTGRESQL_DEPLOYMENT_GUIDE.md  Procfile_minimal  RAILWAY_FIX_INSTRUCTIONS.md  RENDER_DEPLOYMENT_FIXES.md  RENDER_ENV_VARIABLES.md  SECURITY.md  __init__.py  database_operations.py  database_schema.sql  debug_start.py  docker-compose.yml  fix_indentation.py  fly.toml  main.py  main_backup.py  main_production.py  main_secure.py  minimal_main.py  pyproject.toml  railway.toml  redis_manager.py  render.yaml  render_diagnostic.py  requirements.txt  requirements_minimal.txt  requirements_secure.txt  setup.py  simple_app.py  start.sh  (+9 more)
(+406 files in other folders)
